WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96857
REGRESSION (
r125578
): The Mac complex text code path disagrees with the fast path on word spacing
https://bugs.webkit.org/show_bug.cgi?id=96857
Summary
REGRESSION (r125578): The Mac complex text code path disagrees with the fast ...
mitz
Reported
2012-09-14 23:11:57 PDT
REGRESSION (
r125578
): The Mac complex text code path disagrees with the fast path on word spacing
Attachments
Update word-spacing logic in ComplexTextController to match WidthIterator
(6.84 KB, patch)
2012-09-14 23:35 PDT
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-09-14 23:35:03 PDT
Created
attachment 164275
[details]
Update word-spacing logic in ComplexTextController to match WidthIterator
mitz
Comment 2
2012-09-15 09:27:08 PDT
Fixed in <
http://trac.webkit.org/r128691
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug